# voxel-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-mingw.ps1  build-vs-project.ps1  build.ps1  vcpkg.json
include/glad/: glad.h
lib/: glad.c
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  fragment.glsl  game.cpp  game.h  main.cpp  noise_generator.cpp  noise_generator.hpp  player.cpp  player.hpp  shader.cpp  shader.h  shader.hpp  vertex.glsl  voxel.cpp  voxel.hpp  voxel_world.cpp  voxel_world.hpp  world.h
src/ecs/: component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h  system_manager.cpp  system_manager.h
src/ecs/components/: camera.h  cubemesh.cpp  cubemesh.h  input.h  lifespan.h  transform.h
src/ecs/systems/: camera_system.cpp  camera_system.h  rendering_system.cpp  rendering_system.h
